flux/apps/freshrss/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-api
  namespace: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-api
  template:
    metadata:
      labels:
        app: rss-api
    spec:
      containers:
      - name: rss-api
        image: ghcr.io/skulldorom/rss-api:latest
        ports:
        - containerPort: 5000
